Update index Cache Firebase.html

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
             .modal-content { padding: 20px; }
         }
     </style>
+    <script>
+        // Anti-cache permanent
+        document.addEventListener("DOMContentLoaded", function() {
+            document.querySelectorAll("link[rel='stylesheet'], script[src]").forEach(el => {
+                const attr = el.tagName === "LINK" ? "href" : "src";
+                el.setAttribute(attr, el.getAttribute(attr) + "?v=" + new Date().getTime());
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="container">
@@ -535,6 +544,63 @@
             URL.revokeObjectURL(a.href);
             a.remove();
         }
+    </script>
+    <script type="module">
+        // Firebase
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+        import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyA2MjMWssWKh74NIru2wAvR3rPZ6eFH854",
+            authDomain: "plnning-familial.firebaseapp.com",
+            projectId: "plnning-familial",
+            storageBucket: "plnning-familial.firebasestorage.app",
+            messagingSenderId: "97302700143",
+            appId: "1:97302700143:web:f50693e7cd5ef514a4ed9a"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        const titleInput = document.getElementById("title");
+        const dateInput = document.getElementById("date");
+        const descInput = document.getElementById("description");
+        const eventList = document.getElementById("event-list");
+
+        async function loadEvents() {
+            eventList.innerHTML = "";
+            const querySnapshot = await getDocs(collection(db, "events"));
+            querySnapshot.forEach(docSnap => {
+                const data = docSnap.data();
+                const div = document.createElement("div");
+                div.className = "event-item";
+                div.innerHTML = `
+                    <h3>${data.title} - ${data.date}</h3>
+                    <p>${data.description}</p>
+                    <button data-id="${docSnap.id}">Supprimer</button>
+                `;
+                div.querySelector("button").addEventListener("click", async () => {
+                    await deleteDoc(doc(db, "events", docSnap.id));
+                    loadEvents();
+                });
+                eventList.appendChild(div);
+            });
+        }
+
+        document.getElementById("addEvent").addEventListener("click", async () => {
+            if (!titleInput.value || !dateInput.value) return alert("Titre et date obligatoires");
+            await addDoc(collection(db, "events"), {
+                title: titleInput.value,
+                date: dateInput.value,
+                description: descInput.value
+            });
+            titleInput.value = "";
+            dateInput.value = "";
+            descInput.value = "";
+            loadEvents();
+        });
+
+        loadEvents();
     </script>
 </body>
 </html>
