--- a/index.html
+++ b/index.html
@@ -288,18 +288,15 @@ async function loadListsFromCloud() {
 
         // === Données ===
         let currentWeekOffset = 0;
-        let people = ['Marie', 'Pierre', 'Jean', 'Sophie', 'Paul'];
+        let people = ['Nassera', 'Karima', 'Nadera', 'Messaoud', 'Mehdi'];
         let tasks = [
             { name: 'Faire les courses', category: 'courses' },
-            { name: 'Préparer le petit-déjeuner', category: 'repas' },
             { name: 'Préparer le déjeuner', category: 'repas' },
             { name: 'Préparer le dîner', category: 'repas' },
             { name: 'Faire le ménage', category: 'menage' },
             { name: 'Laver le linge', category: 'menage' },
             { name: 'Donner les médicaments', category: 'soins' },
-            { name: 'Aide à la toilette', category: 'soins' },
             { name: 'Tenir compagnie', category: 'compagnie' },
-            { name: 'Promenade', category: 'compagnie' },
             { name: 'Rendez-vous médical', category: 'transport' },
             { name: 'Papiers administratifs', category: 'administratif' },
         ];
